*SVN*

* Modify routing so that you can say :require => { :method => :post } for a route, and the route will never be selected unless the request method is POST. Only works for route recognition, not for route generation. [Jamis Buck]

* Added :add_headers option to verify which merges a hash of name/value pairs into the response's headers hash if the prerequisites cannot be satisfied. [Sam Stephenson]
  ex. verify :only => :speak, :method => :post, 
             :render => { :status => 405, :text => "Must be post" }, 
             :add_headers => { "Allow" => "POST" }

* Added ActionController.filter_parameter_logging that makes it easy to remove passwords, credit card numbers, and other sensitive information from being logged when a request is handled #1897 [jeremye@bsa.ca.gov]


*1.12.1* (April 6th, 2005)

* Fixed that template extensions would be cached development mode #4624 [Stefan Kaes]

* Update to Prototype 1.5.0_rc0 [Sam Stephenson]

* Honor skipping filters conditionally for only certain actions even when the parent class sets that filter to conditionally be executed only for the same actions. #4522 [Marcel Molina Jr.]

* Delegate xml_http_request in integration tests to the session instance. [Jamis Buck]

* Update the diagnostics template skip the useless '<controller not set>' text. [Nicholas Seckar]

* CHANGED DEFAULT: Don't parse YAML input by default, but keep it available as an easy option [DHH]

* Add additional autocompleter options [aballai, Thomas Fuchs]

* Fixed fragment caching of binary data on Windows #4493 [bellis@deepthought.org]

* Applied Prototype $() performance patches (#4465, #4477) and updated script.aculo.us [Sam Stephenson, Thomas Fuchs]

* Added automated timestamping to AssetTagHelper methods for stylesheets, javascripts, and images when Action Controller is run under Rails [DHH]. Example:

    image_tag("rails.png") # => '<img alt="Rails" src="/images/rails.png?1143664135" />'
  